# MergeYAY

./: .gitignore  CMakeLists.txt
src/: Common.h  main.cpp
